--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -25,11 +25,13 @@ services:
     ports:
       - 13306:3306
     volumes:
+      - ./mysql/data: /var/lib/mysql
       - type: volume
         source: db-store
         target: /var/lib/mysql
         volume:
-          - ./mysql/data: db-store
+          nocopy: true
+      
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
