--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,6 +1,4 @@
 version: '3.8'
-volumes:
-  db-store:
 services:
   app:
     build: .
@@ -25,11 +23,7 @@ services:
     ports:
       - 13306:3306
     volumes:
-      - type: volume
-        source: db-store
-        target: /var/lib/mysql
-        volume:
-          nocopy: true  
+      - ./db:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
