--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,6 +1,4 @@
 version: '3.8'
-volumes:
-  db-store:
 services:
   app:
     build: .
@@ -26,7 +24,7 @@ services:
       - 13306:3306
     volumes:
       - type: volume
-        source: db-store
+        source: ./db
         target: /var/lib/mysql
         volume:
           nocopy: true
