--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3.8'
+volumes:
+  db-store:
 services:
   app:
     build: .
@@ -23,7 +25,11 @@ services:
     ports:
       - 13306:3306
     volumes:
-      - ../db:/var/lib/mysql
+      - type: volume
+        source: db-store
+        target: /var/lib/mysql
+        volume:
+          nocopy: true
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
