--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       dockerfile: ./mysql/Dockerfile
     ports:
       - 13306:3306
+    restart: always
     volumes:
       - "../db:/var/lib/mysql"
     environment:
