--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -27,12 +27,9 @@ services:
       dockerfile: ./mysql/Dockerfile
     ports:
       - 13306:3306
+    restart: always
     volumes:
-      - type: volume
-        source: db-store
-        target: /var/lib/mysql
-        volume:
-          nocopy: true
+      - "../db:/var/lib/mysql"
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
