--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -29,7 +29,11 @@ services:
       - 13306:3306
     restart: always
     volumes:
-      - "../db:/var/lib/mysql"
+      - type: volume
+        source: ../db
+        target: /var/lib/mysql
+        volume:
+          nocopy: true
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
