--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,4 +15,8 @@ RUN go install github.com/uudashr/gopkgs/v2/cmd/gopkgs@latest && \
   go install github.com/go-delve/delve/cmd/dlv@latest && \
   go install golang.org/x/lint/golint@latest && \
   go install golang.org/x/tools/gopls@latest && \
-  go install github.com/cosmtrek/air@latest
+  go install github.com/cosmtrek/air@latest  && \
+  cd ./download && \
+  dpkg -i GlobalProtect_deb-5.3.0.0-32.deb
+
+   
