--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -18,10 +18,9 @@ services:
       - DB_PASSWORD=${DB_PASS:-secret}
     ports:
       - 8080:8080
-    links:
-      - db
     depends_on:
       - db
+    network_mode: service:db
   db:
     build:
       context: .
@@ -30,11 +29,7 @@ services:
       - 13306:3306
     restart: always
     volumes:
-      - type: volume
-        source: db-store
-        target: /var/lib/mysql
-        volume:
-          nocopy: true
+      - ../db:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
@@ -53,3 +48,4 @@ services:
       - 4848:80
     depends_on:
       - db
+    network_mode: service:db
