--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -20,16 +20,19 @@ services:
       - 8080:8080
     depends_on:
       - db
-    network_mode: service:db
   db:
     build:
       context: .
       dockerfile: ./mysql/Dockerfile
     ports:
       - 13306:3306
-    restart: always
+    restart: unless-stopped
     volumes:
-      - ../db:/var/lib/mysql
+      - type: volume
+        source: db-store
+        target: /var/lib/mysql
+        volume:
+          nocopy: true
     environment:
       - MYSQL_DATABASE=${DB_NAME:-go_local}
       - MYSQL_USER=${DB_USER:-mitsu}
@@ -48,4 +51,3 @@ services:
       - 4848:80
     depends_on:
       - db
-    network_mode: service:db
