--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,15 +17,16 @@
     }
   },
   "extensions": [
-    "doggy8088.go-extension-pack",
-    "golang.go",
-    "MS-CEINTL.vscode-language-pack-ja",
-    "coenraads.bracket-pair-colorizer-2",
-    "eamodio.gitlens",
-    "github.vscode-pull-request-github",
-    "ms-azuretools.vscode-docker",
-    "ms-vsliveshare.vsliveshare",
-    "vscode-icons-team.vscode-icons",
-    "visualstudioexptteam.vscodeintellicode"
-  ]
+	"doggy8088.go-extension-pack",
+	"golang.go",
+	"MS-CEINTL.vscode-language-pack-ja",
+	"coenraads.bracket-pair-colorizer-2",
+	"eamodio.gitlens",
+	"github.vscode-pull-request-github",
+	"ms-azuretools.vscode-docker",
+	"ms-vsliveshare.vsliveshare",
+	"vscode-icons-team.vscode-icons",
+	"visualstudioexptteam.vscodeintellicode",
+	"rangav.vscode-thunder-client"
+]
 }
