--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,7 @@
 	"vscode-icons-team.vscode-icons",
 	"visualstudioexptteam.vscodeintellicode",
 	"rangav.vscode-thunder-client",
-	"jinliming2.vscode-go-template"
+	"jinliming2.vscode-go-template",
+	"analytic-signal.preview-pdf"
 ]
 }
