--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 VERSION=1.0
-LOGFILE=log/log 
+LOGFILE=storage/logs/log 
 TEMPDIR=templates
 TEMPFILE=sample2.html
-QRCODE=templates/qr.png
+QRCODE=templates/qrcode
 EXCELFILE=data/test.xlsx
 STORAGE=storage 
 PDFFILE=example.pdf
