--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VERSION=1.0
-LOGFILE=storage/logs/log 
+LOGFILE=log 
+LOGDIR=storage/logs
 TEMPDIR=templates
 TEMPFILE=sample2.html
 QRCODE=templates/qrcode
