move config to env

--- a/.env
+++ b/.env
@@ -7,3 +7,14 @@ QRCODE=templates/qrcode
 EXCELFILE=data/test.xlsx
 STORAGE=storage 
 PDFFILE=example.pdf
+MARGINLEFT=10
+MARGINRIGHT=10
+MARGINTOP=5
+MARGINBOTTOM=5
+JAVASCRIPTDELAY=700
+DPI=100
+IMAGEDPI=150
+IMAGEQUALITY=150
+LOWQUALITY=true
+MX=40
+MY=5
