add comment in .env

--- a/.env
+++ b/.env
@@ -7,14 +7,19 @@ QRCODE=templates/qrcode
 EXCELFILE=data/test.xlsx
 STORAGE=storage 
 PDFFILE=example.pdf
+######### window set Margin
 MARGINLEFT=10
 MARGINRIGHT=10
 MARGINTOP=5
 MARGINBOTTOM=5
+######### linux set marinX,marginY
+MX=40
+MY=5
+##########################
 JAVASCRIPTDELAY=700
 DPI=100
 IMAGEDPI=150
 IMAGEQUALITY=150
 LOWQUALITY=true
-MX=40
-MY=5
+###### windows=screen ,linux=print
+MEDIA=print
