--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
+APPNAME=GENERATE PDF REPORT
 VERSION=1.0
 LOGFILE=log 
 LOGDIR=storage/logs
 TEMPDIR=templates
 TEMPFILE=sample4.html
-QRCODE=templates/qrcode
 EXCELFILE=data/test.xlsx
 STORAGE=storage 
-PDFFILE=example.pdf
 ######### window set Margin
 MARGINLEFT=10
 MARGINRIGHT=10
@@ -16,7 +15,7 @@ MARGINBOTTOM=5
 MX=40
 MY=5
 ##########################
-JAVASCRIPTDELAY=700
+JAVASCRIPTDELAY=800
 DPI=100
 IMAGEDPI=150
 IMAGEQUALITY=150
